--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,30 +10,35 @@
   // visibility: hidden;
   // transition: all .3s;
 
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+  }
+
   &__content {
     @include absoluteCentre;
-    width: 70%;
+    width: 80%;
     background-color: $colour-white;
     box-shadow: 0 2rem 4rem rgba($colour-black, .2);
     border-radius: $radius-large;
     display: table;
     overflow: hidden;
-    // opacity: 0;
-    // transform: translate(-50%, -50%) scale(.25);
-    // transition: all .5s .2s;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(.25);
+    transition: all .4s .2s;
   }
 
   &__left {
-    width: 55%;
+    width: 43%;
     display: table-cell;
 
   }
 
   &__right {
-    width: 45%;
+    width: 57%;
     display: table-cell;
     vertical-align: middle;
-    padding: 3rem 5rem;
+    padding: 3rem;
   }
 
   &__img {
@@ -41,8 +46,52 @@
     width: 100%;
   }
 
-  &__text {
-    font-size: $default-font-size;
-    margin-bottom: 4rem;
+  &:target {
+    opacity: 1;
+    visibility: visible;
   }
+
+  &:target &__content {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid $colour-grey-light-2;
+
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid $colour-grey-light-2;
+    & p {
+      margin-bottom: 1rem;
+    }
+
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $colour-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all .2s;
+      line-height: 1;
+    }
+
+    :hover {
+      color: $colour-primary;
+    }
 }
